test/corpus/block/abort_check.txt
==========================
abort_check
==========================

# see: https://github.com/vectordotdev/vector/issues/13527
# result: {"a": "string"}

.a = "string"
{
  _x = .a
  .a = abort
}

--------------------------

(program
  (comment)
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (string)))
  (term
    (block
      (assignment
        left: (assign_target
          (ident))
        right: (term
          (query
            (event)
            (path
              field: (field)))))
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              field: (field))))
        right: (abort)))))
