test/corpus/block/fallible.txt
==========================
fallible
==========================

# result: 1

{
  parse_json("invalid")
  2
} ?? 1

--------------------------

(program
  (comment)
  (binary_expression
    left: (term
      (block
        (term
          (function_call
            (ident)
            arguments: (argument
              (term
                (string)))))
        (term
          (integer))))
    right: (term
      (integer))))
