test/corpus/block/metadata_block_type.txt
==========================
metadata_block_type
==========================

# result: {"object": {"foo": {"bytes": true}}}
% = {}
type_def({
  %foo = "string"
  %
})

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (query
        (metadata)))
    right: (object))
  (function_call
    function_name: (ident)
    arguments: (argument
      (block
        (assignment
          left: (assign_target
            (query
              (metadata)
              (path
                (field))))
          right: (string))
        (query
          (metadata))))))
