test/corpus/comment.txt
==========================
Comments
==========================
## This is comments



# result: {
#    "object": {
#       "x": { "boolean": true, "undefined": true },
#       "y": { "bytes": true, "undefined": true }
#    }
# }

# . = {}
# _result = if true {
#    .x = true
# } else {
#    .y = "hi"
# }
# type_def(.)
ok = true

--------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (assignment
    left: (assign_target
      (ident))
    right: (term
      (boolean))))
