test/corpus/if_statement/if_else.txt
==========================
If-else
==========================

# result: ["yes", "no"]

if1 = if true {
    "yes"
} else {
    "no"
}

if2 = if false { "yes" } else { "no" }

[if1, if2]

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (string)))
      (block
        (term
          (string)))))
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (string)))
      (block
        (term
          (string)))))
  (term
    (array
      (term
        (ident))
      (term
        (ident)))))
