test/corpus/if_statement/if_else_object.txt
==========================
If-else object
==========================
# result: {
#   "x": {},
#   "x_type": { "object": {"foo": {"boolean": true, "undefined": true }}},
#   "y": { "foo": true },
#   "y_type": { "object": {"foo": {"boolean": true, "undefined": true }}},
#   "x2": {},
#   "x2_type": { "object": {"foo": {"boolean": true, "undefined": true }}},
#   "y2": { "foo": true },
#   "y2_type": { "object": {"foo": {"boolean": true, "undefined": true }}}
# }

.x = if true {
   {}
} else {
  {
    "foo": true
  }
}
.x_type = type_def(.x)

.y = if false {
   {}
} else {
  {
    "foo": true
  }
}
.y_type = type_def(.x)


.x2 = if false {
   {
     "foo": true
   }
} else {
  {}
}
.x2_type = type_def(.x)

.y2 = if true {
   {
     "foo": true
   }
} else {
  {}
}
.y2_type = type_def(.x)

.

--------------------------

(program
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (object)))
      (block
        (term
          (object
            (object_key
              (string))
            (term
              (boolean)))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (function_call
        (ident)
        arguments: (argument
          (term
            (query
              (event)
              (path
                field: (field))))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (object)))
      (block
        (term
          (object
            (object_key
              (string))
            (term
              (boolean)))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (function_call
        (ident)
        arguments: (argument
          (term
            (query
              (event)
              (path
                field: (field))))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (object
            (object_key
              (string))
            (term
              (boolean)))))
      (block
        (term
          (object)))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (function_call
        (ident)
        arguments: (argument
          (term
            (query
              (event)
              (path
                field: (field))))))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (object
            (object_key
              (string))
            (term
              (boolean)))))
      (block
        (term
          (object)))))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (function_call
        (ident)
        arguments: (argument
          (term
            (query
              (event)
              (path
                field: (field))))))))
  (term
    (query
      (event))))
