test/corpus/if_statement/if_expression.txt
==========================
If expression
==========================

# result: true

result = if true {
  "string"
}
assert!(result == "string")
assert!(type_def(result) == {"bytes": true, "null": true})


result = if false {
  "string"
}
assert!(result == null)
assert!(type_def(result) == {"bytes": true, "null": true})

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (boolean))
      (block
        (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (ident)
        right: (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (function_call
          function_name: (ident)
          arguments: (argument
            (ident)))
        right: (object
          (key
            (string))
          (value
            (boolean))
          (key
            (string))
          (value
            (boolean))))))
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (boolean))
      (block
        (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (ident)
        right: (null))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (function_call
          function_name: (ident)
          arguments: (argument
            (ident)))
        right: (object
          (key
            (string))
          (value
            (boolean))
          (key
            (string))
          (value
            (boolean)))))))
