test/corpus/if_statement/if_new_external_assignment.txt
==========================
If new external assignment
==========================

# result: {"any": true}

assert!(type_def(.a) == {"any": true})
if false {
  .a = "string"
}
type_def(.a)

--------------------------

(program
  (comment)
  (function_call
    function_name: (ident)
    arguments: (argument
      (binary_expression
        left: (function_call
          function_name: (ident)
          arguments: (argument
            (query
              (event)
              (path
                (field)))))
        right: (object
          (entry
            (key
              (string))
            (value
              (boolean)))))))
  (if_statement
    condition: (predicate
      (boolean))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              (field))))
        right: (string))))
  (function_call
    function_name: (ident)
    arguments: (argument
      (query
        (event)
        (path
          (field))))))
