test/corpus/if_statement/if_null.txt
==========================
If null
==========================

# result: {"any": true}

assert!(type_def(.a) == {"any": true})
if false {
  .a = "string"
}
type_def(.a)

--------------------------

(program
  (comment)
  (term
    (function_call
      (ident)
      arguments: (argument
        (binary_expression
          left: (term
            (function_call
              (ident)
              arguments: (argument
                (term
                  (query
                    (event)
                    (path
                      field: (field)))))))
          right: (term
            (object
              (object_key
                (string))
              (term
                (boolean))))))))
  (if_statement
    condition: (predicate
      (term
        (boolean)))
    (block
      (assignment
        left: (assign_target
          (query
            (event)
            (path
              field: (field))))
        right: (term
          (string)))))
  (term
    (function_call
      (ident)
      arguments: (argument
        (term
          (query
            (event)
            (path
              field: (field))))))))
