test/corpus/if_statement/if_resolves.txt
==========================
If resolves
==========================

# result: true

result = if true {
    "yes"
}
assert!(result == "yes")
assert!(type_def(result) == {"bytes": true, "null": true})

--------------------------

(program
  (comment)
  (assignment
    left: (assign_target
      (ident))
    right: (if_statement
      condition: (predicate
        (term
          (boolean)))
      (block
        (term
          (string)))))
  (term
    (function_call
      (ident)
      arguments: (argument
        (binary_expression
          left: (term
            (ident))
          right: (term
            (string))))))
  (term
    (function_call
      (ident)
      arguments: (argument
        (binary_expression
          left: (term
            (function_call
              (ident)
              arguments: (argument
                (term
                  (ident)))))
          right: (term
            (object
              (object_key
                (string))
              (term
                (boolean))
              (object_key
                (string))
              (term
                (boolean)))))))))
