test/corpus/literal/boolean.txt
==========================
Boolean Literals
==========================

.true = true
.false = false
.

--------------------------

(program
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (boolean)))
  (assignment
    left: (assign_target
      (query
        (event)
        (path
          field: (field))))
    right: (term
      (boolean)))
  (term
    (query
      (event))))
