test/corpus/literal/float.txt
==========================
Floating Point Literals
==========================

12_312.2
-12_312.2
12_312.0
0.

--------------------------

(program
  (term
    (float))
  (term
    (float))
  (term
    (float))
  (term
    (float)))
