test/corpus/literal/integer.txt
==========================
Integer Literals
==========================

123_000_123

-2_000_000

31110000

--------------------------

(program
  (term
    (integer))
  (term
    (integer))
  (term
    (integer)))
