test/corpus/literal/regex.txt
==========================
Regex Literals
==========================

# result: r'foo?bar"baz"\'qux'

r'foo?bar"baz"\'qux'

--------------------------

(program
  (comment)
  (term
    (regex
      (regex_escape_sequence))))
